# expo-sandbox

./: .pre-commit-config.yaml  Disney.tsx  app.json  dump.rdb  package-lock.json  package.json  tsconfig.json
app/: _layout.tsx  index.tsx  templateFixtures.ts
app/components/: CarouselAndGridExpansion.tsx  CreateProfileModal.tsx  DataProvider.tsx  FailedConnectionModal.tsx  GridDataProvider.tsx  GridLayout.tsx  GridTypes.tsx  Home.tsx  HorizontalSandbox.tsx  HorizontalSets.tsx  Join.tsx  Notes.txt  Play.tsx  Profile.tsx  Publish.tsx  Settings.tsx  VerticalCards.tsx  VerticalSanbox.tsx
app/navigation/: HomeStack.tsx
backend/: dump.rdb  pyproject.toml
backend/app/: asgi.py  settings.py  urls.py
backend/game/: consumers.py  models.py  routing.py  serializers.py  tests.py  urls.py  views.py
backend/game/migrations/: 0001_initial.py  0002_alter_player_game.py  0003_remove_player_game_game_game.py  0004_remove_game_game_game_players.py  0005_game_code.py  0006_game_last_updated.py  0007_remove_game_last_updated.py
frontend/: .eslintrc.js  app.json  package-lock.json  package.json  tsconfig.json
frontend/app/: constants.ts  index.tsx  services.ts  templateFixtures.ts  types.ts  utils.ts
frontend/app/components/: Carousel.tsx  CarouselItem.tsx  CompleteTaskModal.tsx  CreateProfileModal.tsx  EditableGrid.tsx  FailedConnectionModal.tsx  GameGrid.tsx  GridLayout.tsx  Home.tsx  IconHeader.tsx  Join.tsx  Play.tsx  Publish.tsx  Settings.tsx  Test.tsx  UpdateProvider.tsx  VerticalReel.tsx
frontend/app/utils/: displayText.ts  gameActions.ts  useGameEntry.ts
